# light

./: Cargo.toml  LICENSE  README.md  todo.txt
legacy/: entity.rs  resource.rs
res/: basic.shader  test.table.yaml
src/: lib.rs  main.rs
src/app/: mod.rs
src/ecs/: component.rs  entity.rs  error.rs  event.rs  mod.rs  util.rs
src/ecs/query/: fetch.rs  filter.rs  mod.rs  state.rs
src/ecs/storage/: blobvec.rs  mod.rs  resource_table.rs  table.rs
src/ecs/system/: mod.rs  param.rs
src/input/: mod.rs  registry.rs
src/log/: macros.rs  mod.rs
src/render/: mod.rs  renderer.rs  resources.rs  shader.rs
