[package]
name = "light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
rand = "0.8.4"
lazy_static = "1.4.0"
fixedbitset = "0.4.1"

# Logging
log = "0.4"
simple_logger = "1.15"

# Math
glam = { version = "0.20.1", features = ["serde", "bytemuck"] }

# OpenGL, window
glium = "0.31.0"
